--- a/Projects/OpenGLCourseApp/OpenGLCourseApp/OpenGLCourseApp.vcxproj
+++ b/Projects/OpenGLCourseApp/OpenGLCourseApp/OpenGLCourseApp.vcxproj
@@ -154,7 +154,6 @@
     <ClCompile Include="..\..\..\Libraries\GLAD\src\glad.c" />
     <ClCompile Include="Camera.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="GlmUtils.cpp" />
     <ClCompile Include="HelloTriangle_1.cpp" />
     <ClCompile Include="HelloTriangle_2.cpp" />
     <ClCompile Include="HelloTriangle_3.cpp" />
@@ -182,7 +181,11 @@
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\Container\fragment.shader" />
+    <None Include="Shaders\Container\vertex.shader" />
     <None Include="Shaders\fragment.shader" />
+    <None Include="Shaders\LightSource\fragment.shader" />
+    <None Include="Shaders\LightSource\vertex.shader" />
     <None Include="Shaders\Shaders_1_Vertex.shader" />
     <None Include="Shaders\Shaders_2_Vertex.shader" />
     <None Include="Shaders\Shaders_3_Vertex.shader" />
