--- a/Projects/OpenGLCourseApp/OpenGLCourseApp/OpenGLCourseApp.vcxproj
+++ b/Projects/OpenGLCourseApp/OpenGLCourseApp/OpenGLCourseApp.vcxproj
@@ -88,13 +88,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/SDL2_ttf/include;$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/SDL2_ttf/include;$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/assimp/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_image/lib/x86;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x86;$(SolutionDir)/../../Libraries/SDL2_ttf/lib/x86;$(SolutionDir)/../../Libraries/SDL2/lib/x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/assimp/lib/x64;$(SolutionDir)/../../Libraries/SDL2_image/lib/x64;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/SDL2_ttf/lib/x64;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;opengl32.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -105,15 +105,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/SDL2_ttf/include;$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/SDL2_ttf/include;$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/assimp/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_image/lib/x86;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x86;$(SolutionDir)/../../Libraries/SDL2_ttf/lib/x86;$(SolutionDir)/../../Libraries/SDL2/lib/x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/assimp/lib/x64;$(SolutionDir)/../../Libraries/SDL2_image/lib/x64;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/SDL2_ttf/lib/x64;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;opengl32.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -122,13 +122,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/SDL2_ttf/include;$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/SDL2_ttf/include;$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/assimp/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_image/lib/x86;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x86;$(SolutionDir)/../../Libraries/SDL2_ttf/lib/x86;$(SolutionDir)/../../Libraries/SDL2/lib/x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/assimp/lib/x64;$(SolutionDir)/../../Libraries/SDL2_image/lib/x64;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/SDL2_ttf/lib/x64;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;opengl32.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -139,15 +139,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/SDL2_ttf/include;$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/SDL2_ttf/include;$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/assimp/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_image/lib/x86;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x86;$(SolutionDir)/../../Libraries/SDL2_ttf/lib/x86;$(SolutionDir)/../../Libraries/SDL2/lib/x86;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;opengl32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/assimp/lib/x64;$(SolutionDir)/../../Libraries/SDL2_image/lib/x64;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/SDL2_ttf/lib/x64;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_image.lib;SDL2_mixer.lib;SDL2_ttf.lib;opengl32.lib;assimp-vc142-mtd.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -158,12 +158,13 @@
     <ClCompile Include="HelloTriangle_2.cpp" />
     <ClCompile Include="HelloTriangle_3.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Mesh.cpp" />
+    <ClCompile Include="Model.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="Shaders_1.cpp" />
     <ClCompile Include="Shaders_2.cpp" />
     <ClCompile Include="Shaders_3.cpp" />
     <ClCompile Include="Textures_1.cpp" />
-    <ClCompile Include="Texture.cpp" />
     <ClCompile Include="Textures_2.cpp" />
     <ClCompile Include="Textures_3.cpp" />
     <ClCompile Include="Transformation_2.cpp" />
@@ -174,9 +175,10 @@
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Game.h" />
+    <ClInclude Include="Mesh.h" />
+    <ClInclude Include="Model.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="stb_image.h" />
-    <ClInclude Include="Texture.h" />
     <ClInclude Include="Utils.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
