--- a/Projects/OpenGLCourseApp/OpenGLCourseApp/OpenGLCourseApp.vcxproj.filters
+++ b/Projects/OpenGLCourseApp/OpenGLCourseApp/OpenGLCourseApp.vcxproj.filters
@@ -168,5 +168,8 @@
     <Image Include="Assets\Textures\metal.png">
       <Filter>Resource Files\Assets\Textures</Filter>
     </Image>
+    <Image Include="Assets\Textures\grass.png">
+      <Filter>Resource Files\Assets\Textures</Filter>
+    </Image>
   </ItemGroup>
 </Project>
