--- a/Projects/OpenGLCourseApp/OpenGLCourseApp/OpenGLCourseApp.vcxproj.filters
+++ b/Projects/OpenGLCourseApp/OpenGLCourseApp/OpenGLCourseApp.vcxproj.filters
@@ -22,9 +22,6 @@
     <Filter Include="Resource Files\Assets\Textures">
       <UniqueIdentifier>{d1cb7263-c0a4-45b1-9d60-0510184a4717}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Source Files\Exercises">
-      <UniqueIdentifier>{28026bcd-256e-433a-a2fa-2185bf94781e}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Resource Files\Shaders\LightSource">
       <UniqueIdentifier>{7d0d9950-0e4b-42d8-b105-84e712cb42ea}</UniqueIdentifier>
     </Filter>
@@ -36,6 +33,12 @@
     </Filter>
     <Filter Include="Resource Files\Shaders\DepthTesting">
       <UniqueIdentifier>{149a9aec-942d-4f1d-a6fc-fbc2dd446e37}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Assets\Textures\Skybox">
+      <UniqueIdentifier>{0e4cffed-e881-4e52-bbcd-30c706548181}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Shaders\Skybox">
+      <UniqueIdentifier>{bda97bc1-c2b8-404a-8b7e-32475b488a7f}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -53,36 +56,6 @@
     </ClCompile>
     <ClCompile Include="Shader.cpp">
       <Filter>Source Files</Filter>
-    </ClCompile>
-    <ClCompile Include="HelloTriangle_1.cpp">
-      <Filter>Source Files\Exercises</Filter>
-    </ClCompile>
-    <ClCompile Include="HelloTriangle_2.cpp">
-      <Filter>Source Files\Exercises</Filter>
-    </ClCompile>
-    <ClCompile Include="HelloTriangle_3.cpp">
-      <Filter>Source Files\Exercises</Filter>
-    </ClCompile>
-    <ClCompile Include="Shaders_2.cpp">
-      <Filter>Source Files\Exercises</Filter>
-    </ClCompile>
-    <ClCompile Include="Shaders_1.cpp">
-      <Filter>Source Files\Exercises</Filter>
-    </ClCompile>
-    <ClCompile Include="Shaders_3.cpp">
-      <Filter>Source Files\Exercises</Filter>
-    </ClCompile>
-    <ClCompile Include="Textures_1.cpp">
-      <Filter>Source Files\Exercises</Filter>
-    </ClCompile>
-    <ClCompile Include="Textures_2.cpp">
-      <Filter>Source Files\Exercises</Filter>
-    </ClCompile>
-    <ClCompile Include="Textures_3.cpp">
-      <Filter>Source Files\Exercises</Filter>
-    </ClCompile>
-    <ClCompile Include="Transformation_2.cpp">
-      <Filter>Source Files\Exercises</Filter>
     </ClCompile>
     <ClCompile Include="Camera.cpp">
       <Filter>Source Files</Filter>
@@ -145,6 +118,12 @@
     <None Include="Shaders\DepthTesting\vertex.shader">
       <Filter>Resource Files\Shaders\DepthTesting</Filter>
     </None>
+    <None Include="Shaders\Skybox\vertex.shader">
+      <Filter>Resource Files\Shaders\Skybox</Filter>
+    </None>
+    <None Include="Shaders\Skybox\fragment.shader">
+      <Filter>Resource Files\Shaders\Skybox</Filter>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Image Include="Assets\Textures\awesomeface.png">
@@ -173,6 +152,24 @@
     </Image>
     <Image Include="Assets\Textures\transparent_window.png">
       <Filter>Resource Files\Assets\Textures</Filter>
+    </Image>
+    <Image Include="Assets\Textures\Skybox\back.jpg">
+      <Filter>Resource Files\Assets\Textures\Skybox</Filter>
+    </Image>
+    <Image Include="Assets\Textures\Skybox\bottom.jpg">
+      <Filter>Resource Files\Assets\Textures\Skybox</Filter>
+    </Image>
+    <Image Include="Assets\Textures\Skybox\front.jpg">
+      <Filter>Resource Files\Assets\Textures\Skybox</Filter>
+    </Image>
+    <Image Include="Assets\Textures\Skybox\left.jpg">
+      <Filter>Resource Files\Assets\Textures\Skybox</Filter>
+    </Image>
+    <Image Include="Assets\Textures\Skybox\right.jpg">
+      <Filter>Resource Files\Assets\Textures\Skybox</Filter>
+    </Image>
+    <Image Include="Assets\Textures\Skybox\top.jpg">
+      <Filter>Resource Files\Assets\Textures\Skybox</Filter>
     </Image>
   </ItemGroup>
 </Project>
