--- a/Projects/Arkanoid/Arkanoid/Arkanoid.vcxproj.filters
+++ b/Projects/Arkanoid/Arkanoid/Arkanoid.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="GameObject.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BallObject.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -87,6 +90,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameObject.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="BallObject.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
