--- a/Projects/Arkanoid/Arkanoid/Arkanoid.vcxproj
+++ b/Projects/Arkanoid/Arkanoid/Arkanoid.vcxproj
@@ -165,6 +165,7 @@
   <ItemGroup>
     <ClInclude Include="BallObject.h" />
     <ClInclude Include="Constants.h" />
+    <ClInclude Include="DirectionEnum.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameLevel.h" />
     <ClInclude Include="GameObject.h" />
