--- a/Projects/Arkanoid/Arkanoid/Arkanoid.vcxproj
+++ b/Projects/Arkanoid/Arkanoid/Arkanoid.vcxproj
@@ -157,6 +157,7 @@
     <ClCompile Include="GameLevel.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="ParticleGenerator.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="SpriteRenderer.cpp" />
@@ -170,6 +171,7 @@
     <ClInclude Include="GameLevel.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameStateEnum.h" />
+    <ClInclude Include="ParticleGenerator.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SpriteRenderer.h" />
@@ -177,6 +179,8 @@
     <ClInclude Include="Texture2D.h" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="Shaders\ParticleRendering.frag" />
+    <None Include="Shaders\ParticleRendering.vert" />
     <None Include="Shaders\SpriteRendering.frag" />
     <None Include="Shaders\SpriteRendering.vert" />
   </ItemGroup>
