--- a/Projects/Arkanoid/Arkanoid/Arkanoid.vcxproj
+++ b/Projects/Arkanoid/Arkanoid/Arkanoid.vcxproj
@@ -157,7 +157,7 @@
     <ClCompile Include="GameLevel.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="MusicManager.cpp" />
+    <ClCompile Include="MusicPlayer.cpp" />
     <ClCompile Include="ParticleGenerator.cpp" />
     <ClCompile Include="PostProcessor.cpp" />
     <ClCompile Include="PowerUp.cpp" />
@@ -175,7 +175,7 @@
     <ClInclude Include="GameLevel.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameStateEnum.h" />
-    <ClInclude Include="MusicManager.h" />
+    <ClInclude Include="MusicPlayer.h" />
     <ClInclude Include="ParticleGenerator.h" />
     <ClInclude Include="PostProcessor.h" />
     <ClInclude Include="PowerUp.h" />
