--- a/Projects/Tetris/Tetris/Tetris.vcxproj
+++ b/Projects/Tetris/Tetris/Tetris.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="SpriteRenderer.cpp" />
     <ClCompile Include="Texture2D.cpp" />
+    <ClCompile Include="UtilsGeneral.cpp" />
     <ClCompile Include="UtilsPiece.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -174,6 +175,7 @@
     <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="stb_image.h" />
     <ClInclude Include="Texture2D.h" />
+    <ClInclude Include="UtilsGeneral.h" />
     <ClInclude Include="UtilsPiece.h" />
   </ItemGroup>
   <ItemGroup>
