--- a/Projects/Tetris/Tetris/Tetris.vcxproj.filters
+++ b/Projects/Tetris/Tetris/Tetris.vcxproj.filters
@@ -57,6 +57,9 @@
     <ClCompile Include="UtilsPiece.cpp">
       <Filter>Source Files\Utils</Filter>
     </ClCompile>
+    <ClCompile Include="UtilsGeneral.cpp">
+      <Filter>Source Files\Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -94,6 +97,9 @@
     </ClInclude>
     <ClInclude Include="DirectionEnum.h">
       <Filter>Header Files\Enums</Filter>
+    </ClInclude>
+    <ClInclude Include="UtilsGeneral.h">
+      <Filter>Header Files\Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
