--- a/Projects/Tetris/Tetris/Tetris.vcxproj.filters
+++ b/Projects/Tetris/Tetris/Tetris.vcxproj.filters
@@ -101,6 +101,9 @@
     <ClInclude Include="UtilsGeneral.h">
       <Filter>Header Files\Utils</Filter>
     </ClInclude>
+    <ClInclude Include="PieceTypeEnum.h">
+      <Filter>Header Files\Enums</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\SpriteRendering.frag">
