--- a/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
+++ b/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{79ec4c90-179f-4960-b50e-13a07959edf5}</ProjectGuid>
-    <RootNamespace>Tetris</RootNamespace>
+    <ProjectGuid>{515fd1e9-d40b-45eb-b1f5-6c8116e89e40}</ProjectGuid>
+    <RootNamespace>DanmakuPrototype</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -88,13 +88,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_image/lib/x64;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/SDL2/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -105,15 +105,15 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_image/lib/x64;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/SDL2/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
@@ -122,13 +122,13 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_image/lib/x64;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/SDL2/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -139,55 +139,35 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/SDL2_image/include;$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)/../../Libraries/freetype/include;$(SolutionDir)/../../Libraries/SDL2_mixer/include;$(SolutionDir)/../../Libraries/GLAD/include;$(SolutionDir)/../../Libraries/SDL2/include;$(SolutionDir)/../../Libraries/glm;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_image/lib/x64;$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/SDL2/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;SDL2_image.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>$(SolutionDir)/../../Libraries/SDL2_mixer/lib/x64;$(SolutionDir)/../../Libraries/freetype/lib;$(SolutionDir)/../../Libraries/SDL2/lib/x64;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>SDL2.lib;SDL2main.lib;SDL2_mixer.lib;opengl32.lib;freetype.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\Libraries\GLAD\src\glad.c" />
-    <ClCompile Include="Block.cpp" />
     <ClCompile Include="Game.cpp" />
-    <ClCompile Include="Grid.cpp" />
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="MusicPlayer.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Shader.cpp" />
-    <ClCompile Include="SpriteRenderer.cpp" />
-    <ClCompile Include="TextRenderer.cpp" />
     <ClCompile Include="Texture2D.cpp" />
-    <ClCompile Include="UtilsData.cpp" />
-    <ClCompile Include="UtilsGeneral.cpp" />
-    <ClCompile Include="UtilsPiece.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Block.h" />
     <ClInclude Include="Constants.h" />
-    <ClInclude Include="DirectionEnum.h" />
     <ClInclude Include="Game.h" />
     <ClInclude Include="GameStateEnum.h" />
-    <ClInclude Include="Grid.h" />
-    <ClInclude Include="PieceTypeEnum.h" />
+    <ClInclude Include="MusicPlayer.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Shader.h" />
-    <ClInclude Include="SpriteRenderer.h" />
     <ClInclude Include="stb_image.h" />
-    <ClInclude Include="TextRenderer.h" />
     <ClInclude Include="Texture2D.h" />
-    <ClInclude Include="UtilsData.h" />
-    <ClInclude Include="UtilsGeneral.h" />
-    <ClInclude Include="UtilsPiece.h" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Shaders\SpriteRendering.frag" />
-    <None Include="Shaders\SpriteRendering.vert" />
-    <None Include="Shaders\TextRendering.frag" />
-    <None Include="Shaders\TextRendering.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
