--- a/Projects/Euler/Euler.vcxproj.filters
+++ b/Projects/Euler/Euler.vcxproj.filters
@@ -26,5 +26,11 @@
     <ClInclude Include="Euler1_10.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Euler11_20.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
