--- a/Projects/Euler/Euler.vcxproj
+++ b/Projects/Euler/Euler.vcxproj
@@ -142,8 +142,10 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Euler11_20.h" />
     <ClInclude Include="Euler1_10.h" />
     <ClInclude Include="Includes.h" />
+    <ClInclude Include="Utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
