--- a/Projects/Euler/Euler.vcxproj.filters
+++ b/Projects/Euler/Euler.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="Utils.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Euler21_30.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
