--- a/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
+++ b/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
@@ -169,6 +169,7 @@
     <ClCompile Include="MusicPlayer.cpp" />
     <ClCompile Include="Player.cpp" />
     <ClCompile Include="Projectile.cpp" />
+    <ClCompile Include="ProjectileEmitterComponent.cpp" />
     <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="Shader.cpp" />
     <ClCompile Include="SpriteComponent.cpp" />
@@ -180,7 +181,6 @@
     <ClInclude Include="ColliderComponent.h" />
     <ClInclude Include="CollisionTypeEnum.h" />
     <ClInclude Include="Component.h" />
-    <ClInclude Include="ComponentsInclude.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Enemy.h" />
     <ClInclude Include="Entity.h" />
@@ -197,6 +197,7 @@
     <ClInclude Include="MusicPlayer.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Projectile.h" />
+    <ClInclude Include="ProjectileEmitterComponent.h" />
     <ClInclude Include="ResourceManager.h" />
     <ClInclude Include="Shader.h" />
     <ClInclude Include="SpriteComponent.h" />
