Basic translation + removed friendly fire

--- a/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj.filters
+++ b/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj.filters
@@ -34,6 +34,12 @@
     <Filter Include="Source Files\Entities">
       <UniqueIdentifier>{fc0c9d68-1f00-4e0a-beb4-e6ba227f6102}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Header Files\Utils">
+      <UniqueIdentifier>{c774fd95-09b6-4ce3-8f49-9b207ce5e27e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Utils">
+      <UniqueIdentifier>{4a10b450-60c9-4f1f-b891-3cd391a4f2bf}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp">
@@ -72,9 +78,6 @@
     <ClCompile Include="TextComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
-    <ClCompile Include="GLUtils.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="KeyboardControlComponent.cpp">
       <Filter>Source Files\Components</Filter>
     </ClCompile>
@@ -98,6 +101,12 @@
     </ClCompile>
     <ClCompile Include="ProjectileEmitterComponent.cpp">
       <Filter>Source Files\Components</Filter>
+    </ClCompile>
+    <ClCompile Include="GLUtils.cpp">
+      <Filter>Source Files\Utils</Filter>
+    </ClCompile>
+    <ClCompile Include="CollisionUtils.cpp">
+      <Filter>Source Files\Utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -149,9 +158,6 @@
     <ClInclude Include="Component.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
-    <ClInclude Include="GLUtils.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="KeyboardControlComponent.h">
       <Filter>Header Files\Components</Filter>
     </ClInclude>
@@ -181,6 +187,12 @@
     </ClInclude>
     <ClInclude Include="ProjectileEmitterComponent.h">
       <Filter>Header Files\Components</Filter>
+    </ClInclude>
+    <ClInclude Include="CollisionUtils.h">
+      <Filter>Header Files\Utils</Filter>
+    </ClInclude>
+    <ClInclude Include="GLUtils.h">
+      <Filter>Header Files\Utils</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
