--- a/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
+++ b/Projects/DanmakuPrototype/DanmakuPrototype/DanmakuPrototype.vcxproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <ClCompile Include="..\..\..\Libraries\GLAD\src\glad.c" />
     <ClCompile Include="ColliderComponent.cpp" />
+    <ClCompile Include="CollisionUtils.cpp" />
     <ClCompile Include="Enemy.cpp" />
     <ClCompile Include="Entity.cpp" />
     <ClCompile Include="EntityManager.cpp" />
@@ -180,6 +181,7 @@
   <ItemGroup>
     <ClInclude Include="ColliderComponent.h" />
     <ClInclude Include="CollisionTypeEnum.h" />
+    <ClInclude Include="CollisionUtils.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Constants.h" />
     <ClInclude Include="Enemy.h" />
